---------------------------------------------------------------------------------------------------
Version: 1.1.23
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.22
Date: 2025-01-14
  Features:
    - PlanetsLib.exact_value(property,value):  Returns a surface condition locking the acceptable range of values to one.
    - PlanetsLib.restrict_to_surface(planet):  Returns a surface condition restricting a prototype to the provided planet.
    - Added hidden surface conditions "planet-str" and "parent-body". Each planet-str is by default based on the planet's internal name, and is expected to be unique. Moons have their parent body value set to their parent body's planet-str.
    - Added functions to set and get planet-str values.
  Info:
    - Added documentation for enabling optional surface conditions, in addition to everything else in this update.
    - Fixed incorrect API documentation for borrow_music and set_default_import_location.
  Locale:
    - Added set of description templates to standardize how the relationships between planets are moons are described.

---------------------------------------------------------------------------------------------------
Version: 1.1.21
Date: 2025-01-13
  Bugfixes:
    - Support for mods that delete all space locations.
---------------------------------------------------------------------------------------------------
Version: 1.1.20
Date: 2025-01-13
  Features:
    - The drawn starmap is now layered by a topological sort on the orbit structure.
    - Support for missing 'orientation' fields when the 'distance' is 0.
---------------------------------------------------------------------------------------------------
Version: 1.1.19
Date: 2025-01-12
  Changes:
    - Update Python script examples
---------------------------------------------------------------------------------------------------
Version: 1.1.18
Date: 2025-01-12
  Features: