@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.23
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed crash when a planet has no surface properties.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.22
 Date: 2025-01-14
